--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       </div>
 
       <div class = "card">
-        <h3>5-Stage Pipeline Processor</h3>
+        <h3>Multicycle Processor</h3>
         <ul>
-          <li>Developed a custom ISA and simulated a MIPS processor, using a Harvard architecture and behavioral features of Verilog HDL </li>
-          <li>Used techniques to handle data and control hazards</li>
+          <li>Developed a custom ISA and simulated a processor, using a Harvard architecture and behavioral features of Verilog HDL </li>
+          <li>Processor runs two programs: a) Memory-Interfacing Program and b) Conditional Program</li>
         </ul>
         <button onclick="getProcessor()">Code</button>
       </div>
