--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul>
           <li>Developed an ALU capable of performing arithmetic operations on 4-bit numbers </li>
           <li>Programmed all modules at gate-level using Verilog</li>
-          <li>Created PCB Design of circuit using OrCAD X</li>
+          <li>Created PCB Design of circuit </li>
         </ul>
         <button onclick="getALU()">Code</button>
       </div> 
