--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
         </ul>
         <button onclick="getALU()">Code</button>
       </div> 
+
+   <div class = "card">
+        <h3>'Using Artificial Intelligence to Remove Recyclable Materials from Landfills' Research Proposal</h3>
+        <ul>
+          <li>Developed methodology to implement mechanical arms attached to chassis to sort through materials and differentiate between recyclable and non-recyclable materials </li>
+          <li>Placed within top 5 teams in North America for the Research Opportunity Competition, resulting in proposal published on STEM Fellowship Journal website (powered by Canadian Science Publishing)</li>
+          <li>Created PCB Design of circuit </li>
+        </ul>
+        <button onclick="getALU()">Code</button>
+      </div> 
+      
     
   </div>
 
