--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h3>'Using Artificial Intelligence to Remove Recyclable Materials from Landfills' Research Proposal</h3>
         <ul>
           <li>Developed methodology to implement mechanical arms attached to chassis to sort through materials and differentiate between recyclable and non-recyclable materials </li>
-          <li>Placed within top 5 teams in North America for the Research Opportunity Competition, resulting in proposal published on STEM Fellowship Journal website (powered by Canadian Science Publishing)</li>
+          <li>Placed within top 5 teams for the Research Opportunity Competition, resulting in proposal published on STEM Fellowship Journal website (powered by Canadian Science Publishing)</li>
         </ul>
         <button onclick="">Code</button>
       </div> 
