--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
      <h1> Jayne Srinivas</h1>
     <div class = "text"
-    <h4>Junior Electrical and Computer Engineering Student @ UT Dallas. Interested in VLSI/ASIC Design, Software Engineering/Data Analytics, Verification Testing, and Machine Learning. </h4>
+    <h4>Junior Electrical and Computer Engineering Student @ UT Dallas. Interested in ASIC Design and Testing, Computing and Machine Learning, Software Engineering, and Embedded Systems. </h4>
 
     </div>
    <div class = "socials">
