--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
         </ul>
         <button onclick="getResearch()">Project</button>
       </div> 
+
+       <div class = "card">
+        <h3>Backmasking Project</h3>
+        <ul>
+          <li>Developed methodology to implement mechanical arms attached to chassis to sort through materials and differentiate between recyclable and non-recyclable materials </li>
+          <li>Placed within top 5 teams for the Research Opportunity Competition, resulting in proposal published on STEM Fellowship Journal website (powered by Canadian Science Publishing)</li>
+        </ul>
+        <button onclick="getMasking()">Project</button>
+      </div> 
       
     
   </div>
