--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul>
           <li>Developed an ALU capable of performing arithmetic operations on 4-bit numbers </li>
           <li>Programmed all modules at gate-level using Verilog</li>
-          <li>Created PCB Design of circuit </li>
+          <li>Created PCB Design of circuit</li>
         </ul>
         <button onclick="getALU()">Project</button>
       </div> 
@@ -86,8 +86,8 @@
        <div class = "card">
         <h3>Backmasking Project</h3>
         <ul>
-          <li>Developed methodology to implement mechanical arms attached to chassis to sort through materials and differentiate between recyclable and non-recyclable materials </li>
-          <li>Placed within top 5 teams for the Research Opportunity Competition, resulting in proposal published on STEM Fellowship Journal website (powered by Canadian Science Publishing)</li>
+          <li>Developed Stack ADT implementations using Array and LinkedList in Java to write a program that can reverse a sound clip in a process known as back masking</li>
+          <li>Calculated Upper-Bound Time Complexities of each implementation</li>
         </ul>
         <button onclick="getMasking()">Project</button>
       </div> 
