--- a/index.html
+++ b/index.html
@@ -110,6 +110,25 @@
         <button onclick="getSorting()">Project</button>
       </div> 
 
+      <div class = "card">
+        <h3>Musical Notes</h3>
+        <ul>
+          <li>Develop a program that loads multiple files into vectors of C++ structs, one for musical note frequencies and the other for notes and their durations to represent a tune</li>
+          <li>Implement a menu option to display the tune in ASCII text notation</li>
+        </ul>
+        <button onclick="getNotes()">Project</button>
+      </div> 
+
+       <div class = "card">
+        <h3>World Builder Game</h3>
+        <ul>
+          <li>Create a World Builder program to generate a 10x10 map in C++, where grids, creatures, and a user are represented by data structures, and allow saving the data to a text file</li>
+          <li>Develop a Game Engine program to load and display the map, creatures, and user data from the file created by the World Builder</li>
+        </ul>
+        <button onclick="getGame()">Project</button>
+      </div> 
+
+
 
       
   </div>
