--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h3>Sorting Algorithms</h3>
         <ul>
           <li>Implemented Linear Search, Binary Search, Bubble Sort, and Selection Sort algorithms in C++, and demonstrate their functionality on a small array</li>
-          <li>Use Linear and Binary Search algorithms to conduct a benchmark test on the array</li>
+          <li>Used Linear and Binary Search algorithms to conduct a benchmark test on the array</li>
         </ul>
         <button onclick="getSorting()">Project</button>
       </div> 
@@ -113,8 +113,8 @@
       <div class = "card">
         <h3>Musical Notes</h3>
         <ul>
-          <li>Develop a program that loads multiple files into vectors of C++ structs, one for musical note frequencies and the other for notes and their durations to represent a tune</li>
-          <li>Implement a menu option to display the tune in ASCII text notation</li>
+          <li>Developed a program that loads multiple files into vectors of C++ structs, one for musical note frequencies and the other for notes and their durations to represent a tune</li>
+          <li>Implemented a menu option to display the tune in ASCII text notation</li>
         </ul>
         <button onclick="getNotes()">Project</button>
       </div> 
@@ -122,8 +122,8 @@
        <div class = "card">
         <h3>World Builder Game</h3>
         <ul>
-          <li>Create a World Builder program to generate a 10x10 map in C++, where grids, creatures, and a user are represented by data structures, and allow saving the data to a text file</li>
-          <li>Develop a Game Engine program to load and display the map, creatures, and user data from the file created by the World Builder</li>
+          <li>Created a World Builder program to generate a 10x10 map in C++, where grids, creatures, and a user are represented by data structures, and allow saving the data to a text file</li>
+          <li>Developed a Game Engine program to load and display the map, creatures, and user data from the file created by the World Builder</li>
         </ul>
         <button onclick="getGame()">Project</button>
       </div> 
