--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
       </div>
 
       <div class = "card">
+        <h3>Signal Processing with Operational Amplifiers</h3>
+        <ul>
+          <li>Used an LM741 op-amp, resistors, and various connectors to build inverting and summing amplifier circuits, observing their signal-processing ability with an oscilloscope, and testing an active high-pass filter</li>
+          <li>Results show that the summing amplifier output is the inverted sum of the two input voltages, with the measured outputs closely matching calculated values</li>
+        </ul>
+        <button onclick="getAmp()">Project</button>
+      </div>
+
+      <div class = "card">
         <h3>Guide to Well-Being</h3>
         <ul>
           <li>Developed a full-stack application as part of the Fintech Focus Program to help users track their well-being, using Python, Flask, HTML, CSS, and Bootstrap </li>
