--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class = "header">
   <header>
      <h1> Jayne Srinivas</h1>
     <div class = "text"
@@ -31,6 +32,12 @@
     </header>
 
   <hr style="display: block; height: 10px; border: 0; border-top: 1px solid #bcbcbc; margin: 1em 0; padding: 0;">
+
+    <div class="progress-container">
+    <div class="progress-bar" id="myBar"></div>
+  </div>
+    
+  </div>
   
   <div class = "projectSection">
     <h2 style= "text-align: center; padding-top: 30px;">Projects</h2>
