--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     </header>
 
-  <hr style="display: block; height: 10px; border: 0; border-top: 1px solid #bcbcbc; margin: 1em 0; padding: 0;">
+ <!-- <hr style="display: block; height: 10px; border: 0; border-top: 1px solid #bcbcbc; margin: 1em 0; padding: 0;"> -->
 
     <div class="progress-container">
     <div class="progress-bar" id="myBar"></div>
