--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   
   <div class = "projectSection">
-    <h2 style= "text-align: center; padding-top: 30px;">Projects</h2>
+    <!-- <h2 style= "text-align: center; padding-top: 30px;">Projects</h2> -->
     
     <div class = "container">
       
