--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
         <button onclick="getGame()">Project</button>
       </div> 
 
+      <div class = "card">
+        <h3>Portfolio Website</h3>
+        <ul>
+          <li>Developed responsive website to display engineering projects using HTML, CSS, and Vanilla JavaScript</li>
+        </ul>
+        <button onclick="getSite()">Project</button>
+      </div> 
+
 
 
       
