--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <div class = "card">
         <h3>Signal Processing with Operational Amplifiers</h3>
         <ul>
-          <li>Used an LM741 op-amp, resistors, and various connectors to build inverting and summing amplifier circuits, observing their signal-processing ability with an oscilloscope, and testing an active high-pass filter</li>
-          <li>Results show that the summing amplifier output is the inverted sum of the two input voltages, with the measured outputs closely matching calculated values</li>
+          <li>Used an LM741 op-amp, resistors, and various connectors to build a high pass filter circuit, observing signal-processing ability with an oscilloscope</li>
+          <li>Built summing and inverting amplifiers</li>
         </ul>
         <button onclick="getAmp()">Project</button>
       </div>
