--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
        <div class = "card">
         <h3>'Investigating the Effect of Stochastic Behavior in Magnetic Tunnel Junction for Use in Synaptic Systems for Bio-plausible Neural Networks' Research Poster</h3>
         <ul>
-          <li>Worked with team to train a neural network and systematically adjust the stochasticity of the model across various simulations to assess the impact on neural network performance</li>
+          <li>Worked with a team to train a neural network and systematically adjust the stochasticity of the model across various simulations to assess the impact on neural network performance</li>
           <li>Presented research at an Undergraduate Research Symposium</li>
         </ul>
         <button onclick="getURSA()">Project</button>
