--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@
       </div> 
       
       <div class = "card">
-        <h3>Matrix Operations</h3>
+        <h3>Threading Project</h3>
         <ul>
-          <li>Created a Matrix class for a 3x3 matrix in C++, including overloaded operators for addition, subtraction, and multiplication, along with an inverse function that involves calculating determinants, the cofactor matrix, and the adjoint matrix</li>
-          <li>Implemented a constructor for an identity matrix and a display function to show the matrix contents</li>
+          <li>Developed a concurrent string sorting system in Java using per-letter worker threads, each maintaining a dynamically sorted list via thread-safe insertions</li>
+          <li> Utilized JUnit for validation across multiple test suites, ensuring robust thread coordination and accurate dispatch logic</li>
         </ul>
-        <button onclick="getMatrix()">Project</button>
+        <button onclick="getThread()">Project</button>
       </div> 
 
       <div class = "card">
-        <h3>Sorting Algorithms</h3>
+        <h3>Memory System Simulation</h3>
         <ul>
-          <li>Implemented Linear Search, Binary Search, Bubble Sort, and Selection Sort algorithms in C++, and demonstrate their functionality on a small array</li>
-          <li>Used Linear and Binary Search algorithms to conduct a benchmark test on the array</li>
+          <li>Implemented a virtual memory subsystem in Java, including a custom MainMemory class with frame-level allocation, logical-to-physical address translation via bitwise operations, and FIFO-based page replacement to simulate limited physical memory</li>
+          <li>Developed a TLB with LRU eviction and nanosecond-precision access tracking, integrated through a factory pattern to support modular OS-level component testing with JUnit </li>
         </ul>
-        <button onclick="getSorting()">Project</button>
+        <button onclick="getMemory()">Project</button>
       </div> 
 
       <div class = "card">
@@ -128,15 +128,6 @@
           <li>Developed a Game Engine program to load and display the map, creatures, and user data from the file created by the World Builder</li>
         </ul>
         <button onclick="getGame()">Project</button>
-      </div> 
-
-       <div class = "card">
-        <h3>'Investigating the Effect of Stochastic Behavior in Magnetic Tunnel Junction for Use in Synaptic Systems for Bio-plausible Neural Networks' Research Poster</h3>
-        <ul>
-          <li>Worked with a team to train a neural network and systematically adjust the stochasticity of the model across various simulations to assess the impact on neural network performance</li>
-          <li>Presented research at an Undergraduate Research Symposium</li>
-        </ul>
-        <button onclick="getURSA()">Project</button>
       </div> 
 
       <div class = "card">
