--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
       </div> 
 
       <div class = "card">
-        <h3>Musical Notes</h3>
+        <h3>Warehouse Management System</h3>
         <ul>
-          <li>Developed a program that loads multiple files into vectors of C++ structs, one for musical note frequencies and the other for notes and their durations to represent a tune</li>
-          <li>Implemented a menu option to display the tune in ASCII text notation</li>
+          <li> Engineered a Warehouse Management System using MySQL and SQL to model complex supply chain relationships and ensure accurate inventory tracking across suppliers, warehouses, racks, and distributors</li>
+          <li>Built a dynamic front-end with HTML, CSS, and JavaScript integrated with a MySQL backend, enabling real-time data interaction, transaction processing, and streamlined warehouse operations</li>
         </ul>
-        <button onclick="getNotes()">Project</button>
+        <button onclick="getWarehouse()">Project</button>
       </div> 
 
        <div class = "card">
