--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
       </div> 
 
        <div class = "card">
-        <h3>World Builder Game</h3>
+        <h3>CPU Scheduling Simulation</h3>
         <ul>
-          <li>Created a World Builder program to generate a 10x10 map in C++, where grids, creatures, and a user are represented by data structures, and allow saving the data to a text file</li>
-          <li>Developed a Game Engine program to load and display the map, creatures, and user data from the file created by the World Builder</li>
+          <li>Developed and implemented four CPU scheduling algorithms—First-Come, First-Served, Priority (preemptive), Round-Robin, and Multilevel Feedback Queue—in Java using object-oriented design principles and JUnit for validation, simulating realistic burst-based task execution</li>
+          <li>Engineered scheduler logic to handle task management, preemption, and timing control, integrating priority-based queues and custom timer callbacks to emulate CPU burst lifecycles and dynamic scheduling behavior within a simulated OS environment</li>
         </ul>
-        <button onclick="getGame()">Project</button>
+        <button onclick="getAlgos()">Project</button>
       </div> 
 
       <div class = "card">
