--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div> 
 
       <div class = "card">
-        <h3>Memory System Simulation</h3>
+        <h3>Memory System Simulator</h3>
         <ul>
           <li>Implemented a virtual memory subsystem in Java, including a custom MainMemory class with frame-level allocation, logical-to-physical address translation via bitwise operations, and FIFO-based page replacement to simulate limited physical memory</li>
           <li>Developed a TLB with LRU eviction and nanosecond-precision access tracking, integrated through a factory pattern to support modular OS-level component testing with JUnit </li>
@@ -122,7 +122,7 @@
       </div> 
 
        <div class = "card">
-        <h3>CPU Scheduling Simulation</h3>
+        <h3>CPU Scheduler</h3>
         <ul>
           <li>Developed and implemented four CPU scheduling algorithms—First-Come, First-Served, Priority (preemptive), Round-Robin, and Multilevel Feedback Queue—in Java using object-oriented design principles and JUnit for validation, simulating realistic burst-based task execution</li>
           <li>Engineered scheduler logic to handle task management, preemption, and timing control, integrating priority-based queues and custom timer callbacks to emulate CPU burst lifecycles and dynamic scheduling behavior within a simulated OS environment</li>
