--- a/index.html
+++ b/index.html
@@ -9,111 +9,43 @@
 </head>
 
 <body>
-  <div class="header">
-    <header>
-      <h1>Jayne Srinivas</h1>
-      <div class="text">
-        <h4 id="typewriter"></h4>
-      </div>
-      <div class="socials">
+
+ <div class="topnav">
+      <a href="index.html" class="active">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="experience.html">Experience</a>
+
+      <div class="nav-icons">
         <a href="https://www.linkedin.com/in/jaynesrinivas" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/jayne-s" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="mailto:jaynesrinivas@gmail.com"><i class="fa-regular fa-envelope"></i></a>
       </div>
-    </header>
-
-    <div class="progress-container">
-      <div class="progress-bar" id="myBar"></div>
-    </div>
   </div>
 
-  <div class="projectSection">
-    <h2>Projects</h2>
-    <br>
-    <div class="container">
-      <div class = "card">
-        <h3>Network Simulator</h3>
-        <ul>
-          <li>Discrete-Time Event Simulator built using Java</li>
-          <li>Leveraged Event-driven programming to send and receive network packets</li>
-        </ul>
-        <button onclick="getNetwork()">Project</button>
-      </div>
+    <div class="video-background-section">
+    <video autoplay muted loop playsinline class="video-bg">
+        <source src="14900-259623335_small.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
-      <div class = "card">
-        <h3>Multicycle Processor</h3>
-        <ul>
-          <li>Developed a custom ISA and simulated a processor, using a Harvard architecture and behavioral features of Verilog HDL </li>
-          <li>Processor runs two programs: a) Memory-Interfacing Program and b) Conditional Program</li>
-        </ul>
-        <button onclick="getProcessor()">Project</button>
-      </div>
 
-      <div class = "card">
-        <h3>Signal Processing with Operational Amplifiers</h3>
-        <ul>
-          <li>Used an LM741 op-amp, resistors, and various connectors to build a high pass filter circuit, observing signal-processing ability with an oscilloscope</li>
-          <li>Built summing and inverting amplifiers</li>
-        </ul>
-        <button onclick="getAmp()">Project</button>
-      </div>
+    <div class="section-content">
+        <p>Electrical and Computer Engineering Portfolio</p>
+        <h1>Jayne Srinivas</h1>
+    </div>
+    </div>
 
-      <div class = "card">
-        <h3>Guide to Well-Being</h3>
-        <ul>
-          <li>Developed a full-stack application as part of the Fintech Focus Program to help users track their well-being, using Python, Flask, HTML, CSS, and Bootstrap </li>
-          <li>Created MVPs and presented to staff members at Morgan Stanley</li>
-        </ul>
-        <button onclick="getFintech()">Project</button>
-      </div>
-      
-      <div class = "card">
-        <h3>Arithmetic Logic Unit</h3>
-        <ul>
-          <li>Developed an ALU capable of performing arithmetic operations on 4-bit numbers </li>
-          <li>Programmed all modules at gate-level using Verilog</li>
-        </ul>
-        <button onclick="getALU()">Project</button>
-      </div> 
+    <div class="summary-section">
+      <h1>Summary</h1>
 
-   <div class = "card">
-        <h3>'Using Artificial Intelligence to Remove Recyclable Materials from Landfills' Research Proposal</h3>
-        <ul>
-          <li>Developed methodology to implement mechanical arms attached to chassis to sort through materials and differentiate between recyclable and non-recyclable materials </li>
-          <li>Placed within top 5 teams for the Research Opportunity Competition, resulting in proposal published on STEM Fellowship Journal website (powered by Canadian Science Publishing)</li>
-        </ul>
-        <button onclick="getResearch()">Project</button>
-      </div> 
-
-       <div class = "card">
-        <h3>Backmasking Project</h3>
-        <ul>
-          <li>Developed Stack ADT implementations using Array and LinkedList in Java to write a program that can reverse a sound clip in a process known as back masking</li>
-          <li>Calculated Upper-Bound Time Complexities of each implementation</li>
-        </ul>
-        <button onclick="getMasking()">Project</button>
-      </div> 
-
-      <div class = "card">
-        <h3>Memory System Simulator</h3>
-        <ul>
-          <li>Implemented a virtual memory subsystem in Java, including a custom MainMemory class with frame-level allocation, logical-to-physical address translation via bitwise operations, and FIFO-based page replacement to simulate limited physical memory</li>
-          <li>Developed a TLB with LRU eviction and nanosecond-precision access tracking, integrated through a factory pattern to support modular OS-level component testing with JUnit </li>
-        </ul>
-        <button onclick="getMemory()">Project</button>
-      </div> 
-
-      <div class = "card">
-        <h3>Warehouse Management System</h3>
-        <ul>
-          <li> Engineered a Warehouse Management System using MySQL and SQL to model complex supply chain relationships and ensure accurate inventory tracking across suppliers, warehouses, racks, and distributors</li>
-          <li>Built a dynamic front-end with HTML, CSS, and JavaScript integrated with a MySQL backend, enabling real-time data interaction, transaction processing, and streamlined warehouse operations</li>
-        </ul>
-        <button onclick="getWarehouse()">Project</button>
-      </div> 
+      <p>Thank you for checking out my portfolio! I'm an engineering student with a strong 
+        interest in software development, embedded systems + machine learning + DSP, and data engineering. I enjoy building 
+        projects that bridge hardware and software — from memory simulators and processors to 
+        full-stack applications. I'm driven by curiosity, hands-on learning, and the challenge of 
+        turning complex technical ideas into real, functional solutions. I'm always looking for 
+        opportunities to grow as an engineer and contribute to meaningful, impactful work.</p>
 
     </div>
-  </div>
 
   <script src="script.js"></script>
 </body>
