--- a/experience.html
+++ b/experience.html
@@ -19,6 +19,7 @@
         <a href="https://www.linkedin.com/in/jaynesrinivas" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/jayne-s" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="mailto:jaynesrinivas@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+        <a href="https://medium.com/@jaynesrinivas"><i class="fa-brands fa-medium"></i></a>
       </div>
   </div>
 
