--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
         <a href="https://www.linkedin.com/in/jaynesrinivas" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/jayne-s" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="mailto:jaynesrinivas@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+        <a href="https://medium.com/@jaynesrinivas"><i class="fa-brands fa-medium"></i></a>
       </div>
   </div>
 
@@ -46,15 +47,6 @@
       </div>
 
       <div class = "card">
-        <h3>Signal Processing with Operational Amplifiers</h3>
-        <ul>
-          <li>Used an LM741 op-amp, resistors, and various connectors to build a high pass filter circuit, observing signal-processing ability with an oscilloscope</li>
-          <li>Built summing and inverting amplifiers</li>
-        </ul>
-        <button onclick="getAmp()">Project</button>
-      </div>
-
-      <div class = "card">
         <h3>Guide to Well-Being</h3>
         <ul>
           <li>Developed a full-stack application as part of the Fintech Focus Program to help users track their well-being, using Python, Flask, HTML, CSS, and Bootstrap </li>
@@ -62,30 +54,12 @@
         </ul>
         <button onclick="getFintech()">Project</button>
       </div>
-      
-      <div class = "card">
-        <h3>Arithmetic Logic Unit</h3>
-        <ul>
-          <li>Developed an ALU capable of performing arithmetic operations on 4-bit numbers </li>
-          <li>Programmed all modules at gate-level using Verilog</li>
-        </ul>
-        <button onclick="getALU()">Project</button>
-      </div> 
-
-       <div class = "card">
-        <h3>Backmasking Project</h3>
-        <ul>
-          <li>Developed Stack ADT implementations using Array and LinkedList in Java to write a program that can reverse a sound clip in a process known as back masking</li>
-          <li>Calculated Upper-Bound Time Complexities of each implementation</li>
-        </ul>
-        <button onclick="getMasking()">Project</button>
-      </div> 
 
       <div class = "card">
         <h3>Memory System Simulator</h3>
         <ul>
-          <li>Implemented a virtual memory subsystem in Java, including a custom MainMemory class with frame-level allocation, logical-to-physical address translation via bitwise operations, and FIFO-based page replacement to simulate limited physical memory</li>
-          <li>Developed a TLB with LRU eviction and nanosecond-precision access tracking, integrated through a factory pattern to support modular OS-level component testing with JUnit </li>
+          <li>Implemented a virtual memory subsystem in Java with frame-level allocation, logical-to-physical address translation, and page replacement</li>
+          <li>Developed a TLB with LRU eviction, integrated through a factory pattern to support modular OS-level component testing </li>
         </ul>
         <button onclick="getMemory()">Project</button>
       </div> 
@@ -93,8 +67,8 @@
       <div class = "card">
         <h3>Warehouse Management System</h3>
         <ul>
-          <li> Engineered a Warehouse Management System using MySQL and SQL to model complex supply chain relationships and ensure accurate inventory tracking across suppliers, warehouses, racks, and distributors</li>
-          <li>Built a dynamic front-end with HTML, CSS, and JavaScript integrated with a MySQL backend, enabling real-time data interaction, transaction processing, and streamlined warehouse operations</li>
+          <li>Built Warehouse Management System using MySQL to ensure accurate inventory tracking </li>
+          <li>Built a dynamic front-end with HTML, CSS, and JavaScript integrated with MySQL backend, enabling real-time transaction processing</li>
         </ul>
         <button onclick="getWarehouse()">Project</button>
       </div> 
@@ -104,12 +78,21 @@
       <h1 class="section-title">Research Projects</h1>
       <div class ="card-grid">
       <div class = "card">
-        <h3>'Using Artificial Intelligence to Remove Recyclable Materials from Landfills' Research Proposal</h3>
+        <h3>'Using Artificial Intelligence to Remove Recyclable Materials from Landfills'</h3>
         <ul>
           <li>Developed methodology to implement mechanical arms attached to chassis to sort through materials and differentiate between recyclable and non-recyclable materials </li>
-          <li>Placed within top 5 teams for the Research Opportunity Competition, resulting in proposal published on STEM Fellowship Journal website (powered by Canadian Science Publishing)</li>
+          <li>Placed within top 5 teams for the Research Opportunity Competition, resulting in research proposal published on STEM Fellowship Journal website (powered by Canadian Science Publishing)</li>
         </ul>
         <button onclick="getResearch()">Project</button>
+      </div> 
+
+        <div class = "card">
+        <h3>'Investigating the Effect of Stochastic Behavior in Magnetic Tunnel Junction for use in Synaptic Systems for Bio-plausible Neural Networks'</h3>
+        <ul>
+          <li>Explored stochastic Magnetic Tunnel Junction synapses for neuromorphic neural networks, showing that biologically inspired randomness can enhance learning accuracy and better emulate neural decision-making processes.</li>
+          <li>Received Undegraduate Research Award and presented findings at the Summer Platform for Undegraduate Research Symposium.</li>
+        </ul>
+        <button onclick="getNSC()">Project</button>
       </div> 
 
     </div>
