--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Jayne Srinivas Portfolio</title>
   <script src="https://kit.fontawesome.com/73546715ae.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
+  <!-- python3 -m http.server -->
 </head>
 
 <body>
@@ -19,6 +20,7 @@
         <a href="https://www.linkedin.com/in/jaynesrinivas" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/jayne-s" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="mailto:jaynesrinivas@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+        <a href="https://medium.com/@jaynesrinivas"><i class="fa-brands fa-medium"></i></a>
       </div>
   </div>
 
